initial changes: added new entities, controllers, views, templates...

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,5 +1,8 @@
 registration.duplicate.email=There is already a user registered with the email provided
 registration.successful=User has been registered successfully
+authorised.greeting=Welcome, {0}!
+
+index.page.welcome=Welcome to our book store!
 
 #hibernate validation messages
 hibernate.user.email.message=*Please provide a valid Email
