--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,5 +1,8 @@
 registration.duplicate.email=Пользователь с указанным адресом уже зарегистрирован
 registration.successful=Пользователь успешно зарегистрирован
+authorised.greeting=Добро пожаловать, {0}!
+
+index.page.welcome=Приветствуем в нашем машазине книг!
 
 #hibernate validation messages
 hibernate.user.email.message=*Пожалуйста, предоставьте действительный адрес электронной почты
